# Unicorn

./: .clang-format  .extensionsToFormat  .gitattributes  .gitignore  .gitmodules  .pullapprove.yml  .travis.yml  Action_8hpp_source.html  Adapter_8hpp_source.html  Buffer_8hpp_source.html  CMakeLists.txt  CameraFpsController_8hpp_source.html  Camera_8hpp_source.html  Color_8hpp_source.html  CommandBuffers_8hpp_source.html  Content_8hpp_source.html  Context_8hpp_source.html  CursorShape_8hpp_source.html  CustomValue_8hpp_source.html  FileReader_8hpp_source.html  GamepadProfiler_8hpp_source.html  GamepadState_8hpp_source.html  Gamepad_8hpp_source.html  GammaRamp_8hpp_source.html  Graphics_8hpp_source.html  Handler_8hpp_source.html  Helper_8hpp_source.html  Image_8hpp_source.html  Input_8hpp_source.html  KeyProfiler_8hpp_source.html  Key_8hpp_source.html  LICENSE.md  Logger_8hpp_source.html  Manager_8hpp_source.html  Memory_8hpp_source.html  MeshDescriptor_8hpp_source.html  Mesh_8hpp_source.html  Modifier_8hpp_source.html  MonitorMemento_8hpp_source.html  MonitorProfiler_8hpp_source.html  (+534 more)
TheGame/: CMakeLists.txt  main.cpp
UnicornEngine/: CMakeLists.txt
UnicornEngine/WindowManager/: CMakeLists.txt
UnicornEngine/WindowManager/source/: GammaRamp.cpp  Hub.cpp  Monitor.cpp  Window.cpp
UnicornEngine/WindowManager/source/profilers/: MonitorProfiler.cpp  WindowProfiler.cpp
UnicornEngine/cmake/: AssimpConfig.cmake  GlfwConfig.cmake  GlmConfig.cmake  TinyObjLoaderConfig.cmake  WindowManager.cmake  WinkSignals.cmake  loguru.cmake  stb.cmake  system.cmake  utility.cmake  video.cmake
UnicornEngine/data/shaders/: MultipleTextureShader.frag  MultipleTextureShader.vert  UberShader.frag  UberShader.vert  shader.frag  shader.vert
UnicornEngine/data/textures/city_skybox/: lmcity_dn.tga  lmcity_ft.tga
UnicornEngine/include/unicorn/: Settings.hpp  UnicornEngine.hpp
UnicornEngine/include/unicorn/core/: Settings.hpp  Timer.hpp
UnicornEngine/include/unicorn/graphics/: Camera.hpp  Graphics.hpp  GraphicsSubsystem.hpp  Mesh.hpp  Model.hpp  SceneGraph.hpp  SceneNode.hpp  Shader.hpp  Sprite.hpp  Texture.hpp  Vertex.hpp
UnicornEngine/include/unicorn/system/: Settings.hpp  Timer.hpp  Window.hpp
UnicornEngine/include/unicorn/utility/: Logger.hpp  SharedMacros.hpp
UnicornEngine/include/unicorn/video/: Graphics.hpp  Renderer.hpp
UnicornEngine/source/: Settings.cpp  UnicornEngine.cpp
UnicornEngine/sources/: UnicornEngine.cpp
UnicornEngine/sources/core/: Settings.cpp  Timer.cpp
UnicornEngine/sources/graphics/: Camera.cpp  Graphics.cpp  Mesh.cpp  Model.cpp  SceneGraph.cpp  Shader.cpp  Sprite.cpp  Texture.cpp  Vertex.cpp
UnicornEngine/sources/graphics/vulkan/: VulkanBuffer.cpp  VulkanDevice.cpp  VulkanGraphicsSubsystem.cpp  VulkanRenderer.cpp  VulkanUtils.cpp
UnicornEngine/sources/system/: Settings.cpp  Timer.cpp  Window.cpp
UnicornEngine/sources/utility/: Logger.cpp
UnicornEngine/sources/utility/asset/: Content.cpp  FileReader.cpp  Handler.cpp  SimpleStorage.cpp  Storage.cpp
UnicornEngine/sources/video/: Graphics.cpp  Renderer.cpp
UnicornEngine/system/: CMakeLists.txt
UnicornEngine/system/WindowManager/: CMakeLists.txt
UnicornEngine/system/WindowManager/source/: GammaRamp.cpp  Window.cpp
UnicornEngine/system/source/: Input.cpp  Manager.cpp  Monitor.cpp  Settings.cpp  Timer.cpp  Window.cpp
UnicornEngine/system/source/input/: Gamepad.cpp
UnicornEngine/system/source/profiler/: GamepadProfiler.cpp  KeyProfiler.cpp  MonitorProfiler.cpp  MouseProfiler.cpp  WindowProfiler.cpp
UnicornEngine/utility/: CMakeLists.txt
UnicornEngine/utility/sources/: Memory.cpp
UnicornEngine/video/: CMakeLists.txt
UnicornEngine/video/source/: Camera.cpp  CameraController.cpp  CameraFpsController.cpp  Color.cpp  Graphics.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelMatrix.cpp  Primitives.cpp  Renderer.cpp  Sprite.cpp  Texture.cpp
UnicornRender/: CMakeLists.txt  UnicornRenderConfig.cmake.in  UnicornVersionInfo.rc.in
UnicornRender/cmake/: FindGLM.cmake  GlfwConfig.cmake  GlmConfig.cmake  InstallInfo.cmake  MuleConfig.cmake  TinyObjLoaderConfig.cmake  Utils.cmake  WinkSignals.cmake  assimp.cmake  loguru.cmake  stb.cmake  system.cmake  utility.cmake  video.cmake
UnicornRender/data/shaders/: UberShader.frag  UberShader.vert  text.frag  text.vert
UnicornRender/include/unicorn/: Loggers.hpp  Settings.hpp  UnicornRender.hpp
UnicornRender/source/: Loggers.cpp  Settings.cpp  UnicornRender.cpp
UnicornRender/system/: CMakeLists.txt
UnicornRender/system/source/: Manager.cpp  Monitor.cpp  Timer.cpp  Window.cpp
UnicornRender/utility/: CMakeLists.txt
UnicornRender/utility/source/: Memory.cpp  Settings.cpp
UnicornRender/utility/sources/: Math.cpp  Memory.cpp
UnicornRender/video/: CMakeLists.txt
UnicornRender/video/source/: Camera.cpp  Camera2DController.cpp  CameraController.cpp  CameraFpsController.cpp  CameraProjection.cpp  Color.cpp  Graphics.cpp  IRenderer.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelMatrix.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  Primitives.cpp  Renderer.cpp  Text.cpp  Texture.cpp  Transform.cpp
VorpalEngine/: CMakeLists.txt
VorpalEngine/cmake/: AssimpConfig.cmake  FindGLFW.cmake  GlfwConfig.cmake  GlmConfig.cmake  TinyObjLoaderConfig.cmake  loguru.cmake  stb.cmake
VorpalEngine/data/: dependency_description.info
VorpalEngine/docs/: Doxyfile.in
VorpalEngine/include/vorpal/: VorpalEngine.hpp  utility.hpp
VorpalEngine/sources/: Graphics.cpp  Logger.cpp  Renderer.cpp  Settings.cpp  Timer.cpp  VorpalEngine.cpp
VorpalEngine/sources/core/: Settings.cpp  Timer.cpp
VorpalEngine/sources/graphics/: Camera.cpp  Graphics.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Sprite.cpp  Texture.cpp  VulkanRenderer.cpp  VulkanUtils.cpp
VorpalEngine/sources/system/: Settings.cpp  Timer.cpp  Window.cpp
VorpalEngine/sources/utility/: Logger.cpp
VorpalEngine/sources/video/: Graphics.cpp  Renderer.cpp
demos/SanicJymper/: CMakeLists.txt  main.cpp
tests/asset/: CMakeLists.txt  SimpleStorageTest.cpp  StorageTest.cpp
tests/asset/TestInput/: derpiness.txt
(+490 files in other folders)
